--- a/index.html
+++ b/index.html
@@ -1,94 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jashan Portfolio</title>
-    <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="icon" href="Images/jashan.png" />
-    <meta name="name" content="Jashan Portfolio" />
-    <script
-      src="https://kit.fontawesome.com/403c2c2a9a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <nav>
-      <input type="checkbox" id="sidemenubutton" />
-      <label for="sidemenubutton" class="menu-bar"
-        ><i class="fa-solid fa-bars"></i
-      ></label>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Jashan Portfolio</title>
+  <link rel="stylesheet" href="CSS/style.css" />
+  <link rel="icon" href="Images/jashan-red-photo.jpg" />
+  <meta name="name" content="Jashan Portfolio" />
+  <script src="https://kit.fontawesome.com/403c2c2a9a.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <nav>
+    <input type="checkbox" id="sidemenubutton" />
+    <label for="sidemenubutton" class="menu-bar">
+      <i class="fa-solid fa-bars"></i
+    ></label>
 
-      <label for="">Jashan</label>
-      <div class="social-media">
-        <a href="https://github.com/jashan-panwa" target="_blank"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-        <a href="https://linkedin.com/in/jashan-panwa" target="_blank"
-          ><i class="fa-brands fa-linkedin"></i
-        ></a>
-        <a href="https://instagram.com/its.me_jashan" target="_blank"
-          ><i class="fa-brands fa-square-instagram"></i
-        ></a>
+    <label for=""><span style="color: #981e47">J</span>ashan</label>
+    <div class="social-media">
+      <a href="https://github.com/jashan-panwa" target="_blank">
+        <i class="fa-brands fa-github"></i
+      </a>
+      <a href="https://linkedin.com/in/jashan-panwa" target="_blank">
+        <i class="fa-brands fa-linkedin"></i
+      </a>
+      <a href="https://instagram.com/its.me_jashan" target="_blank">
+        <i class="fa-brands fa-square-instagram"></i
+      </a>
+    </div>
+  </nav>
+  <div class="side-menu">
+    <center>
+      <img src="Images/jashan-red-photo.jpg" alt="profilepicture" />
+    </center>
+    <br />
+    <a href="#"><i class="fa-solid fa-house"></i><span>&nbsp;Home</span></a>
+    <a href="#projectslink">
+      <i class="fa-solid fa-bucket"></i><span>&nbsp;Projects</span>
+    </a>
+    <a href="#aboutmelink">
+      <i class="fa-solid fa-address-card"></i><span>&nbsp;About Me</span>
+    </a>
+    <a href="#experiencelink">
+      <i class="fa-solid fa-briefcase"></i><span>&nbsp;Experience</span>
+    </a>
+    <a href="#contactlink">
+      <i class="fa-solid fa-phone"></i><span>&nbsp;Contact Me</span>
+    </a>
+  </div>
+  <!---------------NAVIGATION & SIDE BAR END ----------->
+  <div class="screendata">
+    <!--this is a separate area from going under the sidebar-->
+
+    <!---------------HOME PAGE---------------->
+    <div class="homepage">
+      <div class="homepage-left">
+        <span class="hiname" style="font-size: 20px; font-weight: 600">
+          Hi' , &#128075;<br />My name is
+        </span>
+        <h1 style="border-bottom: 4px solid #981e47; font-size: 35px">
+          <span style="color: #981e47">J</span>ashan<br />
+        </h1>
+        <div class="iamwrapper">
+          <div class="static-txt">I'm a&nbsp;</div>
+          <ul class="dynamic-txt">
+            <li><span>Designer&nbsp;&nbsp;&nbsp;&nbsp;</span></li>
+            <li><span>Developer&nbsp;&nbsp;&nbsp;</span></li>
+            <li><span>Daring&nbsp;&nbsp;&nbsp;</span></li>
+          </ul>
+        </div>
+        <p>
+          Seeking a position , where I <br />
+          can use my skills to the <br />advantage of your company
+          <br />, while having the scope to <br />
+          develop my own skills
+        </p>
       </div>
-    </nav>
-    <div class="side-menu">
-      <center>
-        <img src="Images/jashan.png" alt="profilepicture" />
-      </center>
-      <br />
-      <a href=""><i class="fa-solid fa-house"></i><span>&nbsp;Home</span></a>
-      <a href=""
-        ><i class="fa-solid fa-bucket"></i><span>&nbsp;Projects</span></a
-      >
-      <a href=""
-        ><i class="fa-solid fa-address-card"></i><span>&nbsp;About Me</span></a
-      >
-      <a href=""
-        ><i class="fa-solid fa-briefcase"></i><span>&nbsp;Experience</span></a
-      >
-      <a href=""
-        ><i class="fa-solid fa-phone"></i><span>&nbsp;Contact Me</span></a
-      >
+      <a href="#contactlink" class="getintouch">
+        <i class="fa-solid fa-handshake"></i>Get in Touch!!!
+      </a>
+      <a href="Images/JASHAN RESUME.pdf" download class="download">
+        <i class="fa-solid fa-download"></i>Download Resume
+      </a>
+      <div class="homepage-right">
+        <img src="Images/jashan-red-photo-full.jpg" alt="image">
+      </div>
+      <div class="homepagebox homepage-box-1">
+        <h2 style="color: white; margin-top: 30px; margin-bottom: 0px">4+</h2>
+        PROJECTS
+      </div>
+      <div class="homepagebox homepage-box-2">
+        <h2 style="color: white; margin-top: 30px; margin-bottom: 0px">2+</h2>
+        EXPERIENCE
+      </div>
+      <div class="homepagebox homepage-box-3">
+        <h2 style="color: white; margin-top: 30px; margin-bottom: 0px">
+          19+
+        </h2>
+        AGE
+      </div>
     </div>
 
-    <div class="screendata">
-      <img src="Images/jashan.png" alt="image" width="40%" height="15%" />
-      <h1>Jashan Portfolio</h1>
-      <h2>About Me</h2>
-      <p>i am a website developer in haryana india</p>
-      <p>i have a btech.CSE from chitkara university</p>
-      <p>i like coding and front end work</p>
-      <h2>Credentials and portfolio</h2>
-      <p>
-        <a href="Resume.html" target="_blank">My Resume</a> |
-        <a href="https://github.com/jashan-panwa" target="_blank">my github</a>
-      </p>
-      <h2>contacts</h2>
-      <p>
-        Email:<a href="mailto:jashanpanwa2003@gmail.com" target="_blank"
-          >jashanpanwa2003@gmail.com</a
-        >
-      </p>
-
-      <footer>
-        <hr />
-        <code>copyright (C) 2023</code>
-      </footer>
+    <!---------------Projects---------------->
+    <div id="projectslink" style="height: 100px"></div>
+    <h2><i class="fa-solid fa-bucket"></i><span>&nbsp;Projects</span></h2>
+    <div class="projectbox">
+      <img src="Images/projects/lookbook logo.png" alt="lookbook logo">
+      <h3>Look Book</h3><br>
+      <h4>A online  E-book providing website.</h4><br>
+      <p>Nothings Suits More To Your Look, Then A Good Book.</p><br><br>
+      <a href="" class="but1 buttonshow" target="_blank">
+        <i class="fa-solid fa-computer"></i>&nbsp;Case Study
+      </a>
+      <a href="" class="but2 buttonshow" target="_blank">
+        <i class="fa-solid fa-globe"></i>&nbsp;Go Live
+      </a>
+      <a href="" class="but3 buttonshow" target="_blank">
+        <i class="fa-brands fa-github"></i>&nbsp;View Code
+      </a>
+    </div>
+    <div class="projectbox">
+      <img src="Images/projects/waste reboot logo.png" alt="lookbook logo">
+      <h3>Waste Reboot</h3><br>
+      <h4>Website to Locate Dustib & near by waste facility.</h4><br>
+      <p>Helps User to Locate and recycle waste, our moto is Rethink, Recycle, Renew, & Reap Awards</p><br><br>
+      <a href="https://www.figma.com/file/g1Pz5SUBEuHrxfjBsOEU7j/Untitled?type=design&node-id=1-4&mode=design&t=wn6gFfaYATu9jr19-0" class="but1 buttonshow" target="_blank">
+        <i class="fa-solid fa-computer"></i>&nbsp;Case Study
+      </a>
+      <a href="" class="but2 buttonshow" target="_blank">
+        <i class="fa-solid fa-globe"></i>&nbsp;Go Live
+      </a>
+      <a href="" class="but3 buttonshow" target="_blank">
+        <i class="fa-brands fa-github"></i>&nbsp;View Code
+      </a>
+    </div>
+    <div class="projectbox">
+      <img src="Images/projects/weather canvas.png" alt="lookbook logo">
+      <h3>Weather Canvas</h3><br>
+      <h4>Capturing Weather's Artistry, Weather Canvas Unveils</h4><br>
+      <p>Weather Canvas, your online companion for weather updates, offers you a seamless experience to check the latest weather conditions in any city.</p><br><br>
+      <a href="" class="but1 buttonshow" target="_blank">
+        <i class="fa-solid fa-computer"></i>&nbsp;Case Study
+      </a>
+      <a href="https://jashan-panwa.github.io/Weather-Canvas/" class="but2 buttonshow" target="_blank">
+        <i class="fa-solid fa-globe"></i>&nbsp;Go Live
+      </a>
+      <a href="https://github.com/Jashan-panwa/Weather-Canvas" class="but3 buttonshow" target="_blank">
+        <i class="fa-brands fa-github"></i>&nbsp;View Code
+      </a>
     </div>
 
-    <script>
-      // JavaScript to toggle the side menu on button click
-      const sideMenuButton = document.getElementById("sidemenubutton");
-      const sideMenu = document.querySelector(".side-menu");
+    <!---------------EDUCATION  AND ITS TIMELINE ----------->
+    <div id="aboutmelink" style="height: 100px"></div>
+    <h2><i class="fa-solid fa-address-card"></i>&nbsp;About Me</h2>
+    <h3 class="subheading3"><i class="fa-solid fa-school"></i><span>&nbsp;Education</span></h3>
+    <div class="timeline">
+      <div class="timelinebox">
+        <img src="Images/chitkaralogo.jpg" alt="chitkara logo" />
+        <h3>Bachelors of Engineering</h3>
+        <h4>Chitkara University, Rajpura, Punjab, India. (2021-2025)</h4>
+        <p>Computer Science and Engineering student with a CGPA of 9.6 (till date).</p>
+      </div>
+      <div class="timelinebox">
+        <img src="Images/ipslogo.jpg" alt="Ips logo" />
+        <h3>Senior Year</h3>
+        <h4>Indian public school, Ambala, Haryana, India. (2020-2021)</h4>
+        <p>12th grade, science stream with 93%.</p>
+      </div>
+      <div class="timelinebox">
+        <img src="Images/ipslogo.jpg" alt="Ips logo" />
+        <h3>Senior Secondary Year</h3>
+        <h4>Indian public school, Ambala, Haryana, India. (2019-2020)</h4>
+        <p>10th with 88%.</p>
+      </div>
+      <div class="timelinedivider">
+        <div class="timelinedivider-travler">
+          <i class="fa-solid fa-graduation-cap"></i>
+        </div>
+      </div>
+    </div>
 
-      sideMenuButton.addEventListener("click", function () {
-        if (sideMenuButton.checked) {
-          sideMenu.classList.add("show");
-        } else {
-          sideMenu.classList.remove("show");
-        }
-      });
-    </script>
-  </body>
+    <!-------------------------------EXPERIENCE ------------------------------>
+    <div id="experiencelink" style="height: 100px"></div>
+    <h2>
+      <i class="fa-solid fa-briefcase"></i><span>&nbsp;EXPERIENCE</span>
+    </h2>
+    <div class="timeline">
+      <div class="timelinebox">
+        <img src="Images/ieilogo.jpg" alt="IEI logo" />
+        <h3>IEI Club, CUIET Punjab</h3>
+        <h4>Marketing & Promotions (2021-2023)</h4>
+        <p>Worked in Marketing and promoting team of IEI Club for over two years.</p>
+      </div>
+      <div class="timelinebox">
+        <img src="Images/sheetalclosetlogo.jpg" alt="Sheetal Closet logo" />
+        <h3>Sheetal's Closet</h3>
+        <h4>UX/UI Designer (2022-2024)</h4>
+        <p>Designed Logo, packaging, cards, banners for an e-commerce clothing store.</p>
+      </div>
+      <div class="timelinedivider">
+        <div class="timelinedivider-travler">
+          <i class="fa-solid fa-paintbrush"></i>
+        </div>
+      </div>
+    </div>
+
+    <!------------------------------------------------------------->
+    <div id="contactlink" style="height: 100px"></div>
+    <div class="contact">
+      <div class="contact-left">
+        <h2><i class="fa-solid fa-phone"></i> Contact Me</h2>
+        <p>
+          <i class="fa-sharp fa-solid fa-envelope"></i> Email:
+          <a href="mailto:jashanpanwa2003@gmail.com" target="_blank"
+            >jashanpanwa2003@gmail.com</a
+          >
+        </p>
+        <div class="social-icons">
+          <a href="https://github.com/jashan-panwa" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://linkedin.com/in/jashan-panwa" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://instagram.com/its.me_jashan" target="_blank">
+            <i class="fa-brands fa-square-instagram"></i>
+          </a>
+        </div>
+        <br><Br>
+        <a href="Images/JASHAN RESUME.pdf" download class="buttonshow" target="_blank">
+          <i class="fa-solid fa-download"></i>Download Resume
+        </a>
+      </div>
+      <div class="contact-right">
+        <form name="submit-to-google-sheet">
+          <input
+            type="text"
+            name="Name"
+            placeholder="Your Name"
+            required
+          />
+          <input
+            type="email"
+            name="Email"
+            placeholder="Your Email"
+            required
+          />
+          <textarea
+            name="Message"
+            rows="6"
+            placeholder="Your Message"
+          ></textarea>
+          <button type="submit" id="submitBtn" class="buttonshow">Submit</button>
+        </form><br>
+        <div id="messageContainer" class="hidden">
+          <p>Your message is sent!</p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <code>copyright (C) 2023</code>
+    </footer>
+  </div>
+  <script src="javascript/javascript.js"></script>
+</body>
 </html>
