--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <script src="https://kit.fontawesome.com/403c2c2a9a.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+  <----------------------navbar------------------->
   <nav>
+    
     <input type="checkbox" id="sidemenubutton" />
     <label for="sidemenubutton" class="menu-bar">
       <i class="fa-solid fa-bars"></i
