--- a/index.html
+++ b/index.html
@@ -108,6 +108,21 @@
     <div id="projectslink" style="height: 100px"></div>
     <h2><i class="fa-solid fa-bucket"></i><span>&nbsp;Projects</span></h2>
     <div class="projectbox">
+      <img src="Images/projects/TextZ.png" alt="TextZ logo">
+      <h3>TextZ</h3><br>
+      <h4>A online  E-book providing website.</h4><br>
+      <p>Nothings Suits More To Your Look, Then A Good Book.</p><br><br>
+      <a href="" class="but1 buttonshow" target="_blank">
+        <i class="fa-solid fa-computer"></i>&nbsp;Case Study
+      </a>
+      <a href="" class="but2 buttonshow" target="_blank">
+        <i class="fa-solid fa-globe"></i>&nbsp;Go Live
+      </a>
+      <a href="" class="but3 buttonshow" target="_blank">
+        <i class="fa-brands fa-github"></i>&nbsp;View Code
+      </a>
+    </div>
+    <div class="projectbox">
       <img src="Images/projects/lookbook logo.png" alt="lookbook logo">
       <h3>Look Book</h3><br>
       <h4>A online  E-book providing website.</h4><br>
