--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
     <div class="projectbox">
       <img src="Images/projects/TextZ.png" alt="TextZ logo">
       <h3>TextZ</h3><br>
-      <h4>A online  E-book providing website.</h4><br>
-      <p>Nothings Suits More To Your Look, Then A Good Book.</p><br><br>
+      <h4>Full scale development</h4><br>
+      <p>A real-time chating app</p><br><br>
       <a href="" class="but1 buttonshow" target="_blank">
         <i class="fa-solid fa-computer"></i>&nbsp;Case Study
       </a>
-      <a href="" class="but2 buttonshow" target="_blank">
+      <a href="https://text-z.netlify.app/login" class="but2 buttonshow" target="_blank">
         <i class="fa-solid fa-globe"></i>&nbsp;Go Live
       </a>
-      <a href="" class="but3 buttonshow" target="_blank">
+      <a href="https://github.com/Jashan-panwa/TextZ" class="but3 buttonshow" target="_blank">
         <i class="fa-brands fa-github"></i>&nbsp;View Code
       </a>
     </div>
