--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <h3>TextZ</h3><br>
       <h4>Full scale development</h4><br>
       <p>A real-time chating app</p><br><br>
-      <a href="" class="but1 buttonshow" target="_blank">
+      <a href="https://github.com/Jashan-panwa/TextZ/blob/main/README.md" class="but1 buttonshow" target="_blank">
         <i class="fa-solid fa-computer"></i>&nbsp;Case Study
       </a>
       <a href="https://text-z.netlify.app/login" class="but2 buttonshow" target="_blank">
